--- a/installing/installing-preparing.adoc
+++ b/installing/installing-preparing.adoc
@@ -25,7 +25,8 @@ endif::openshift-origin[]
 * Microsoft Azure on 64-bit x86 instances
 * Microsoft Azure on 64-bit ARM instances
 * Microsoft Azure Stack Hub
-* Google Cloud Platform (GCP)
+* Google Cloud Platform (GCP) on 64-bit x86 instances 
+* Google Cloud Platform (GCP) on 64-bit ARM instances 
 * {rh-openstack-first}
 * IBM Cloud VPC
 * {ibmzProductName} or {linuxoneProductName}
@@ -132,7 +133,7 @@ Not all installation options are supported for all platforms, as shown in the fo
 //This table is for all flavors of OpenShift, except OKD. A separate table is required because OKD does not support multiple AWS architecture types. Trying to maintain one table using conditions, while convenient, is very fragile and prone to publishing errors.
 ifndef::openshift-origin[]
 |===
-||Alibaba |AWS (x86_64) |AWS (arm64) |Azure (x86_64) |Azure (arm64)|Azure Stack Hub |GCP |Nutanix |{rh-openstack} |Bare metal (x86_64) |Bare metal (arm64) |vSphere |VMC |IBM Cloud VPC |{ibmzProductName} |{ibmpowerProductName} |{ibmpowerProductName} Virtual Server
+||Alibaba |AWS (64-bit x86) |AWS (64-bit ARM) |Azure (64-bit x86) |Azure (64-bit ARM)|Azure Stack Hub |GCP (64-bit x86) |GCP (64-bit ARM) |Nutanix |{rh-openstack} |Bare metal (64-bit x86) |Bare metal (64-bit ARM) |vSphere |IBM Cloud VPC |{ibmzProductName} |{ibmpowerProductName} |{ibmpowerProductName} Virtual Server
 
 |Default
 |xref:../installing/installing_alibaba/installing-alibaba-default.adoc#installing-alibaba-default[&#10003;]
@@ -141,6 +142,7 @@ ifndef::openshift-origin[]
 |xref:../installing/installing_azure/installing-azure-default.adoc#installing-azure-default[&#10003;]
 |xref:../installing/installing_azure/installing-azure-default.adoc#installing-azure-default[&#10003;]
 |xref:../installing/installing_azure_stack_hub/installing-azure-stack-hub-default.adoc#installing-azure-stack-hub-default[&#10003;]
+|xref:../installing/installing_gcp/installing-gcp-default.adoc#installing-gcp-default[&#10003;]
 |xref:../installing/installing_gcp/installing-gcp-default.adoc#installing-gcp-default[&#10003;]
 |xref:../installing/installing_nutanix/installing-nutanix-installer-provisioned.adoc#installing-nutanix-installer-provisioned[&#10003;]
 |
@@ -159,6 +161,7 @@ ifndef::openshift-origin[]
 |xref:../installing/installing_azure/installing-azure-customizations.adoc#installing-azure-customizations[&#10003;]
 |xref:../installing/installing_azure/installing-azure-customizations.adoc#installing-azure-customizations[&#10003;]
 |xref:../installing/installing_azure_stack_hub/installing-azure-stack-hub-default.adoc#installing-azure-stack-hub-default[&#10003;]
+|xref:../installing/installing_gcp/installing-gcp-customizations.adoc#installing-gcp-customizations[&#10003;]
 |xref:../installing/installing_gcp/installing-gcp-customizations.adoc#installing-gcp-customizations[&#10003;]
 |xref:../installing/installing_nutanix/installing-nutanix-installer-provisioned.adoc#installing-nutanix-installer-provisioned[&#10003;]
 |xref:../installing/installing_openstack/installing-openstack-installer-custom.adoc#installing-openstack-installer-custom[&#10003;]
@@ -179,6 +182,7 @@ ifndef::openshift-origin[]
 |xref:../installing/installing_azure/installing-azure-network-customizations.adoc#installing-azure-network-customizations[&#10003;]
 |xref:../installing/installing_azure_stack_hub/installing-azure-stack-hub-network-customizations.adoc#installing-azure-stack-hub-network-customizations[&#10003;]
 |xref:../installing/installing_gcp/installing-gcp-network-customizations.adoc#installing-gcp-network-customizations[&#10003;]
+|xref:../installing/installing_gcp/installing-gcp-network-customizations.adoc#installing-gcp-network-customizations[&#10003;]
 |
 |xref:../installing/installing_openstack/installing-openstack-installer-kuryr.adoc#installing-openstack-installer-kuryr[&#10003;]
 |
@@ -196,6 +200,7 @@ ifndef::openshift-origin[]
 |
 |
 |
+|xref:../installing/installing_gcp/installing-restricted-networks-gcp-installer-provisioned.adoc#installing-restricted-networks-gcp-installer-provisioned[&#10003;]
 |xref:../installing/installing_gcp/installing-restricted-networks-gcp-installer-provisioned.adoc#installing-restricted-networks-gcp-installer-provisioned[&#10003;]
 |xref:../installing/installing_nutanix/installing-restricted-networks-nutanix-installer-provisioned.adoc#installing-restricted-networks-nutanix-installer-provisioned[&#10003;]
 |xref:../installing/installing_openstack/installing-openstack-installer-restricted.adoc#installing-openstack-installer-restricted[&#10003;]
@@ -215,7 +220,7 @@ ifndef::openshift-origin[]
 |xref:../installing/installing_azure/installing-azure-private.adoc#installing-azure-private[&#10003;]
 |
 |xref:../installing/installing_gcp/installing-gcp-private.adoc#installing-gcp-private[&#10003;]
-|
+|xref:../installing/installing_gcp/installing-gcp-private.adoc#installing-gcp-private[&#10003;]
 |
 |
 |
@@ -234,6 +239,7 @@ ifndef::openshift-origin[]
 |xref:../installing/installing_azure/installing-azure-vnet.adoc#installing-azure-vnet[&#10003;]
 |
 |xref:../installing/installing_gcp/installing-gcp-vpc.adoc#installing-gcp-vpc[&#10003;]
+|xref:../installing/installing_gcp/installing-gcp-vpc.adoc#installing-gcp-vpc[&#10003;]
 |
 |
 |
@@ -250,6 +256,7 @@ ifndef::openshift-origin[]
 |xref:../installing/installing_aws/installing-aws-government-region.adoc#installing-aws-government-region[&#10003;]
 |
 |xref:../installing/installing_azure/installing-azure-government-region.adoc#installing-azure-government-region[&#10003;]
+|
 |
 |
 |
@@ -282,10 +289,12 @@ ifndef::openshift-origin[]
 |
 |
 |
+|
 
 |China regions
 |
 |xref:../installing/installing_aws/installing-aws-china.adoc#installing-aws-china-region[&#10003;]
+|
 |
 |
 |
