--- a/post_installation_configuration/configuring-multi-arch-compute-machines/creating-multi-arch-compute-nodes-bare-metal.adoc
+++ b/post_installation_configuration/configuring-multi-arch-compute-machines/creating-multi-arch-compute-nodes-bare-metal.adoc
@@ -1,24 +1,32 @@
 :_content-type: ASSEMBLY
 :context: creating-multi-arch-compute-nodes-bare-metal
 [id="creating-multi-arch-compute-nodes-bare-metal"]
-= Creating a cluster with multi-architecture compute machine on bare metal (Technology Preview)
+= Creating a cluster with multi-architecture compute machine on on IBM Z or IBM® LinuxONE using RHEL KVM
 include::_attributes/common-attributes.adoc[]
 
 toc::[]
 
-To create a cluster with multi-architecture compute machines on bare metal, you must have an existing single-architecture bare metal cluster. For more information on bare metal installations, see xref:../../installing/installing_bare_metal/installing-bare-metal.adoc#installing-bare-metal[Installing a user provisioned cluster on bare metal]. You can then add 64-bit ARM compute machines to your {product-title} cluster on bare metal.
+TODO:
+We need to document these steps:
+- get download links for rootfs, kernel and initramfs
+- update_ignition_files
+- dns setup/requirements
+- create_compute_node
+- approve_certs
 
-Before you can add 64-bit ARM nodes to your bare metal cluster, you must upgrade your cluster to one that uses the multi-architecture payload. For more information on migrating to the multi-architecture payload, see xref:../../updating/updating_a_cluster/migrating-to-multi-payload.adoc#migrating-to-multi-payload[Migrating to a cluster with multi-architecture compute machines].
+To create a cluster with multi-architecture compute machines on n IBM Z and IBM® LinuxONE, you must have an existing single-architecture cluster.
 
-The following procedures explain how to create a {op-system} compute machine using an ISO image or network PXE booting. This will allow you to add ARM64 nodes to your bare metal cluster and deploy a cluster with multi-architecture compute machines.
+Before you can add s390x nodes to your cluster, you must upgrade your cluster to one that uses the multi-architecture payload. For more information on migrating to the multi-architecture payload, see xref:../../updating/updating_a_cluster/migrating-to-multi-payload.adoc#migrating-to-multi-payload[Migrating to a cluster with multi-architecture compute machines].
 
-:Featurename: Clusters with multi-architecture compute machines on bare metal user-provisioned installations
-include::snippets/technology-preview.adoc[leveloffset=+1]
+The following procedure explain how to create a {op-system} compute machine using an RHEL KVM instance.This will allow you to add s390x nodes to your cluster and deploy a cluster with multi-architecture compute machines.
 
 include::modules/multi-architecture-verifying-cluster-compatibility.adoc[leveloffset=+1]
 
+TODO: The next file needs to be modified. Most of the first half can be reused.
 include::modules/machine-user-infra-machines-iso.adoc[leveloffset=+1]
 
-include::modules/machine-user-infra-machines-pxe.adoc[leveloffset=+1]
+TODO: User-provisioned DNS requirements
+
+TODO: create VM
 
 include::modules/installation-approve-csrs.adoc[leveloffset=+1]
