--- a/modules/machine-user-infra-machines-iso.adoc
+++ b/modules/machine-user-infra-machines-iso.adoc
@@ -8,14 +8,17 @@ endif::[]
 
 :_content-type: PROCEDURE
 [id="machine-user-infra-machines-iso_{context}"]
-= Creating {op-system} machines using an ISO image
+= Creating {op-system} machines using virt-install
 
-You can create more {op-system-first} compute machines for your bare metal cluster by using an ISO image to create the machines.
+You can create more {op-system-first} compute machines for your IBM Z and IBM® LinuxONE using virt-install.
 
 .Prerequisites
 
-* Obtain the URL of the Ignition config file for the compute machines for your cluster. You uploaded this file to your HTTP server during installation.
-* You must have the OpenShift CLI (`oc`)  installed. 
+* At least one LPAR running on {op-system-base} 8.7 or later with KVM, referred to as {op-system-base} KVM host in this procedure.
+* The KVM/QEMU hypervisor is installed on the {op-system-base} KVM host.
+* A domain name server (DNS) that can perform hostname and reverse lookup for the new compute node.
+* An HTTP or HTTPS server is set up.
+* You must have the OpenShift CLI (`oc`) installed.
 
 .Procedure
 
@@ -26,63 +29,63 @@ You can create more {op-system-first} compute machines for your bare metal clust
 $ oc extract -n openshift-machine-api secret/worker-user-data-managed --keys=userData --to=- > worker.ign
 ----
 
-. Upload the `worker.ign` Ignition config file you exported from your cluster to your HTTP server. Note the URLs of these files. 
+. Upload the `worker.ign` Ignition config file you exported from your cluster to your HTTP server. Note the URL of this file.
 
-. You can validate that the ignition files are available on the URLs. The following example gets the Ignition config files for the compute node: 
+. You can validate that the Ignition file is available on the URL. The following example gets the Ignition file for the compute node:
 +
 [source,terminal]
 ----
-$ curl -k http://<HTTP_server>/worker.ign 
+$ curl -k http://<HTTP_server>/worker.ign
 ----
 
-. You can access the ISO image for booting your new machine by running to following command:
+. Download the {op-system-base} live kernel, initramfs, and rootfs files by running to following commands:
 +
 [source,terminal]
 ----
-RHCOS_VHD_ORIGIN_URL=$(oc -n openshift-machine-config-operator get configmap/coreos-bootimages -o jsonpath='{.data.stream}' | jq -r '.architectures.<architecture>.artifacts.metal.formats.iso.disk.location')
+curl -LO $(oc -n openshift-machine-config-operator get configmap/coreos-bootimages -o jsonpath='{.data.stream}' \
+| jq -r '.architectures.s390x.artifacts.metal.formats.pxe.kernel.location')
 ----
-
-. Use the ISO file to install {op-system} on more compute machines. Use the same method that you used when you created machines before you installed the cluster:
-** Burn the ISO image to a disk and boot it directly.
-** Use ISO redirection with a LOM interface.
-
-. Boot the {op-system} ISO image without specifying any options, or interrupting the live boot sequence. Wait for the installer to boot into a shell prompt in the {op-system} live environment.
-+
-[NOTE]
-====
-You can interrupt the {op-system} installation boot process to add kernel arguments. However, for this ISO procedure you must use the `coreos-installer` command as outlined in the following steps, instead of adding kernel arguments.
-====
-
-. Run the `coreos-installer` command and specify the options that meet your installation requirements. At a minimum, you must specify the URL that points to the Ignition config file for the node type, and the device that you are installing to:
 +
 [source,terminal]
 ----
-$ sudo coreos-installer install --ignition-url=http://<HTTP_server>/<node_type>.ign <device> --ignition-hash=sha512-<digest> <1><2>
+curl -LO =$(oc -n openshift-machine-config-operator get configmap/coreos-bootimages -o jsonpath='{.data.stream}' \
+| jq -r '.architectures.s390x.artifacts.metal.formats.pxe.initramfs.location')
 ----
-<1> You must run the `coreos-installer` command by using `sudo`, because the `core` user does not have the required root privileges to perform the installation.
-<2> The `--ignition-hash` option is required when the Ignition config file is obtained through an HTTP URL to validate the authenticity of the Ignition config file on the cluster node. `<digest>` is the Ignition config file SHA512 digest obtained in a preceding step.
-+
-[NOTE]
-====
-If you want to provide your Ignition config files through an HTTPS server that uses TLS, you can add the internal certificate authority (CA) to the system trust store before running `coreos-installer`.
-====
-+
-The following example initializes a bootstrap node installation to the `/dev/sda` device. The Ignition config file for the bootstrap node is obtained from an HTTP web server with the IP address 192.168.1.2:
 +
 [source,terminal]
 ----
-$ sudo coreos-installer install --ignition-url=http://192.168.1.2:80/installation_directory/bootstrap.ign /dev/sda --ignition-hash=sha512-a5a2d43879223273c9b60af66b44202a1d1248fc01cf156c46d4a79f552b6bad47bc8cc78ddf0116e80c59d2ea9e32ba53bc807afbca581aa059311def2c3e3b
+curl -LO $(oc -n openshift-machine-config-operator get configmap/coreos-bootimages -o jsonpath='{.data.stream}' \
+| jq -r '.architectures.s390x.artifacts.metal.formats.pxe.rootfs.location')
 ----
 
-. Monitor the progress of the {op-system} installation on the console of the machine.
+. Move the downloaded {op-system-base} live kernel, initramfs, and rootfs to your HTTP server before you launch `virt-install`.
+
+. Create the new KVM guest nodes using the {op-system-base} live kernel, initramfs, rootfs, and Ignition files, and adjusted parm line arguments.
+** For `--location`, specify the URL location of the kernel/initrd on the HTTP server.
+** For `coreos.inst.ignition_url=`, specify the `worker.ign` Ignition URL for the machine role. Only HTTP and HTTPS protocols are supported.
+** For `coreos.live.rootfs_url=`, specify the URL location of the rootfs on the HTTP server. Only HTTP and HTTPS protocols are supported.
 +
-[IMPORTANT]
-====
-Ensure that the installation is successful on each node before commencing with the {product-title} installation. Observing the installation process can also help to determine the cause of {op-system} installation issues that might arise.
-====
+[source,terminal]
+----
+$ virt-install \
+   --connect qemu:///system \
+   --name {vn_name} \
+   --autostart \
+   --os-variant rhel9.0 \
+   --cpu host \
+   --vcpus {vcpus} \
+   --memory {memory_mb} \
+   --disk {vn_name}.qcow2,size={image_size | default(100,true)} \
+   --network network={virt_network_parm} \
+   --location {media_location},kernel={rhcos_kernel},initrd={rhcos_initrd} \
+   --extra-args "rd.neednet=1" \
+   --extra-args "coreos.inst.ins0tall_dev=/dev/vda" \
+   --extra-args "coreos.inst.ignition_url={worker_ign}" \
+   --extra-args "coreos.live.rootfs_url={rhcos_rootfs}" \
+   --extra-args "ip={ip}::{default_gateway}:{subnet_mask_length}:{vn_name}::none:{MTU} nameserver={dns}" \
+   --extra-args "console=ttysclp0" \
+   --noautoconsole \
+   --wait
+----
 
 . Continue to create more compute machines for your cluster.
-
-ifeval::["{context}" == "multi-architecture-configuration"]
-:!multi:
-endif::[]
